--- a/sub/Board.html
+++ b/sub/Board.html
@@ -13,10 +13,11 @@
     <meta name="keywords" content="">
     <!-- 스타일 -->
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/sweetalert2@11.4.10/dist/sweetalert2.min.css">
     <link rel="stylesheet" href="../assets/css/ui.css">
 
     <!-- 스타일 eee -->
-  <link rel="stylesheet" href="/_custom/index.8a5a7005.css" /></head>
+  <link rel="stylesheet" href="/_custom/index.7795d686.css" /></head>
   <body>
     <main id="ceo" class="ceo">
       <div id="wrap" class="undefined">
@@ -137,10 +138,6 @@
                                 Board
                               </a>
                             </li><li>
-                              <a href="../sub/BoardDetail.html">
-                                Board Detail
-                              </a>
-                            </li><li>
                               <a href="../sub/Contact.html">
                                 Contact
                               </a>
@@ -252,10 +249,6 @@
                               Board
                             </a>
                           </li><li>
-                            <a class="" href="../sub/BoardDetail.html">
-                              Board Detail
-                            </a>
-                          </li><li>
                             <a class="" href="../sub/Contact.html">
                               Contact
                             </a>
@@ -318,7 +311,7 @@
 </div>
   <div class="co-board-section">
     <div class="inner">
-      <div class="co-board-wrap">
+      <div class="co-board-wrap" data-aos="fade-up" data-aos-duration="1000">
         <div class="img-grp">
           <img class="img" src="../assets/images/p2_detail.webp" alt="">
         </div>
@@ -336,9 +329,20 @@
         </div>
       </div>
       <div class="co-board-news-wrap">
-        <p class="ttl">Upcoming News</p>
-        <div class="co-board-news-conts">
-          <div class="grp">
+        <p class="ttl" data-aos="fade-up" data-aos-duration="1000">Upcoming News</p>
+        <!-- TODO: 빈 컨텐츠 -->
+        <div class="empty-content">
+  <div class="empty-grp">
+    <div class="icon-grp">
+      <span class="icon-box">
+        <i class="icon icon-empty"></i>
+      </span>
+    </div>
+    <p class="empty-tt">컨텐츠가 없습니다.</p>
+  </div>
+</div>
+        <div class="co-board-news-conts" data-aos="fade-up" data-aos-duration="1000">
+          <a href="./BoardDetail.html" class="grp">
   <div class="img-grp">
     <img class="img" src="../assets/images/p2_2.webp">
   </div>
@@ -347,7 +351,7 @@
     <i class="icon icon-date"></i>
     <p class="date">2024.02.29</p>
   </div>
-</div><div class="grp">
+</a><a href="./BoardDetail.html" class="grp">
   <div class="img-grp">
     <img class="img" src="../assets/images/p2_2.webp">
   </div>
@@ -356,7 +360,7 @@
     <i class="icon icon-date"></i>
     <p class="date">2024.02.29</p>
   </div>
-</div><div class="grp">
+</a><a href="./BoardDetail.html" class="grp">
   <div class="img-grp">
     <img class="img" src="../assets/images/p2_2.webp">
   </div>
@@ -365,7 +369,7 @@
     <i class="icon icon-date"></i>
     <p class="date">2024.02.29</p>
   </div>
-</div>
+</a>
         </div>
         <nav class="pagination-wrap">
   <ul>
@@ -514,10 +518,6 @@
                               <span class="footer__link">Board</span>
                             </a>
                           </li><li class="">
-                            <a href="../sub/BoardDetail.html">
-                              <span class="footer__link">Board Detail</span>
-                            </a>
-                          </li><li class="">
                             <a href="../sub/Contact.html">
                               <span class="footer__link">Contact</span>
                             </a>
@@ -543,6 +543,7 @@
     <!-- 스크립트 -->
     <script defer src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
     <script defer src="../assets/js/vendor/swiper.js"></script>
+    <script defer src="https://cdn.jsdelivr.net/npm/sweetalert2@11.4.10/dist/sweetalert2.min.js"></script>
     <script defer src="../assets/js/custom/ui.js"></script>
     <!-- 스크립트 eee -->
   </body></html>
