--- a/sub/CADCatch.html
+++ b/sub/CADCatch.html
@@ -13,10 +13,11 @@
     <meta name="keywords" content="">
     <!-- 스타일 -->
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/sweetalert2@11.4.10/dist/sweetalert2.min.css">
     <link rel="stylesheet" href="../assets/css/ui.css">
 
     <!-- 스타일 eee -->
-  <link rel="stylesheet" href="/_custom/index.8a5a7005.css" /></head>
+  <link rel="stylesheet" href="/_custom/index.7795d686.css" /></head>
   <body>
     <main id="CADCatchTM" class="CADCatchTM">
       <div id="wrap" class="undefined">
@@ -137,10 +138,6 @@
                                 Board
                               </a>
                             </li><li>
-                              <a href="../sub/BoardDetail.html">
-                                Board Detail
-                              </a>
-                            </li><li>
                               <a href="../sub/Contact.html">
                                 Contact
                               </a>
@@ -252,10 +249,6 @@
                               Board
                             </a>
                           </li><li>
-                            <a class="" href="../sub/BoardDetail.html">
-                              Board Detail
-                            </a>
-                          </li><li>
                             <a class="" href="../sub/Contact.html">
                               Contact
                             </a>
@@ -279,8 +272,11 @@
         <article>
           <p class="sub-banner-tit on f-pop">CAD Catch</p>
         </article>
-        <p class="sub-banner-txt">의료 데이터의 수집부터 가공, 처리 분석에
+        
+              <p class="sub-banner-txt is-tab-hide">의료 데이터의 수집부터 가공, 처리 분석에 최적화된 메디렘 CAD Catch<em><sup>TM</sup></em></p>
+              <p class="sub-banner-txt is-tab-show">의료 데이터의 수집부터 가공, 처리 분석에
 최적화된 메디렘 CAD Catch<em><sup>TM</sup></em></p>
+            
         <!-- <img class="" src=`${bannerItem.img}` alt="" /> -->
       </div>
     </div>
@@ -367,8 +363,8 @@
             메디렘 데이터 수집 플랫폼 CAD Catch<sup>TM</sup> 의 차별점
           </h2>
           <p class="is-tab-hide" data-aos="fade-up" data-aos-delay="200" data-aos-duration="1000">
-            메디렘 통합 바이오 데이터 뱅크와 LMM을 활용하여 사용자가 손쉽게 대화용 AI를 통해 다양한 빅테이터에 접근
-            가능한 플랫폼
+            메디렘 통합 바이오 데이터 뱅크와 LMM을 활용하여 사용자가 손쉽게 <br class="is-tab-hide"> 대화용 AI를 통해 다양한
+            빅테이터에 접근 가능한 플랫폼
           </p>
           <p class="is-tab-show" data-aos="fade-up" data-aos-delay="200" data-aos-duration="1000">
             메디렘 데이터 뱅크와 LMM을 활용하여 사용자가 <br>
@@ -384,7 +380,7 @@
             <li data-aos="fade-up" data-aos-delay="100" data-aos-duration="1000">일반인</li>
             <li data-aos="fade-up" data-aos-delay="200" data-aos-duration="1000">만성 질환자</li>
             <li data-aos="fade-up" data-aos-delay="300" data-aos-duration="1000">중증 질환자</li>
-            <li data-aos="fade-up" data-aos-delay="400" data-aos-duration="1000">하위 질환자</li>
+            <li data-aos="fade-up" data-aos-delay="400" data-aos-duration="1000">희귀 질환자</li>
           </ul>
         </div>
 
@@ -568,10 +564,6 @@
                               <span class="footer__link">Board</span>
                             </a>
                           </li><li class="">
-                            <a href="../sub/BoardDetail.html">
-                              <span class="footer__link">Board Detail</span>
-                            </a>
-                          </li><li class="">
                             <a href="../sub/Contact.html">
                               <span class="footer__link">Contact</span>
                             </a>
@@ -597,6 +589,7 @@
     <!-- 스크립트 -->
     <script defer src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
     <script defer src="../assets/js/vendor/swiper.js"></script>
+    <script defer src="https://cdn.jsdelivr.net/npm/sweetalert2@11.4.10/dist/sweetalert2.min.js"></script>
     <script defer src="../assets/js/custom/ui.js"></script>
     <!-- 스크립트 eee -->
   </body></html>
