--- a/sub/Contact.html
+++ b/sub/Contact.html
@@ -13,10 +13,11 @@
     <meta name="keywords" content="">
     <!-- 스타일 -->
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/sweetalert2@11.4.10/dist/sweetalert2.min.css">
     <link rel="stylesheet" href="../assets/css/ui.css">
 
     <!-- 스타일 eee -->
-  <link rel="stylesheet" href="/_custom/index.8a5a7005.css" /></head>
+  <link rel="stylesheet" href="/_custom/index.7795d686.css" /></head>
   <body>
     <main id="contact" class="contact">
       <div id="wrap" class="undefined">
@@ -137,10 +138,6 @@
                                 Board
                               </a>
                             </li><li>
-                              <a href="../sub/BoardDetail.html">
-                                Board Detail
-                              </a>
-                            </li><li>
                               <a href="../sub/Contact.html">
                                 Contact
                               </a>
@@ -252,10 +249,6 @@
                               Board
                             </a>
                           </li><li>
-                            <a class="" href="../sub/BoardDetail.html">
-                              Board Detail
-                            </a>
-                          </li><li>
                             <a class="" href="../sub/Contact.html">
                               Contact
                             </a>
@@ -321,35 +314,33 @@
       <div class="co-contact-info-wrap">
         <div class="ttl-grp">
           <div>
-            <p class="tt">MEDILMM</p>
-            <p class="ttl">
+            <p class="tt" data-aos="fade-up" data-aos-duration="1000">MEDILMM</p>
+            <p class="ttl" data-aos="fade-up" data-aos-duration="1000">
               메디렘은 최고의<br>
               의료정보 제공을 목표로<br>
               나아가고 있습니다
             </p>
           </div>
-          <div class="video-grp mb-show">
-            <video class="video" autoplay loop muted>
-              <source src="../assets/video/p3_s1.mp4" type="video/mp4">
-            </video>
+          <div class="video-grp mb-show" data-aos="fade-up" data-aos-duration="1000">
+            <video class="video" src="../assets/video/p3_s1.mp4" autoplay="" playsinline="" muted=""> </video>
           </div>
           <div>
-            <p class="info-ttl">office information</p>
-            <div class="info-list">
+            <p class="info-ttl" data-aos="fade-up" data-aos-duration="1000">office information</p>
+            <div class="info-list" data-aos="fade-up" data-aos-duration="1000">
               <span class="info-tt">Adress.</span>
               <span class="info-desc">서울시 강남구 테헤란로, 82길 15 349호</span>
             </div>
-            <div class="info-list">
+            <div class="info-list" data-aos="fade-up" data-aos-duration="1000">
               <span class="info-tt">Email.</span>
               <span class="info-desc">yssuh@medilmm.com</span>
             </div>
-            <div class="info-list">
+            <div class="info-list" data-aos="fade-up" data-aos-duration="1000">
               <span class="info-tt">Call.</span>
               <span class="info-desc">02-5220-2593</span>
             </div>
           </div>
         </div>
-        <div class="video-grp mb-hide">
+        <div class="video-grp mb-hide" data-aos="fade-up" data-aos-duration="1000">
           <video class="video" autoplay loop muted>
             <source src="../assets/video/p3_s1.mp4" type="video/mp4">
           </video>
@@ -361,19 +352,19 @@
         <div class="co-contact-conts">
           <div class="left">
             <div class="ttl-grp">
-              <p class="ttl">
+              <p class="ttl" data-aos="fade-up" data-aos-duration="1000">
                 Contact <br>
                 MEDILMM
               </p>
-              <p class="desc">
+              <p class="desc" data-aos="fade-up" data-aos-duration="1000">
                 궁금하신 점을 문의하기를 통해 남겨주시면<br>
                 최대한 빠르게 확인 후 이메일로<br>
                 답변을 남겨드리겠습니다.
               </p>
             </div>
-            <button id="myButton" class="btn btn-inquiry mb-hide">문의 보내기</button>
+            <button id="myButton" class="myButton btn btn-inquiry">문의 보내기</button>
           </div>
-          <div class="right">
+          <div class="right" data-aos="fade-up" data-aos-duration="1000">
             <div>
               <div class="input">
                 <label for="Name" class="label-md type-essential">이름</label>
@@ -403,7 +394,7 @@
               </div>
               <button id="contentPrivacy" class="btn btn-underline">내용 확인</button>
             </div>
-            <button id="myButton" class="btn btn-inquiry mb-show">문의 보내기</button>
+            <!-- <button id="myButton" class="btn btn-inquiry mb-show">문의 보내기</button> -->
           </div>
         </div>
       </div>
@@ -688,10 +679,6 @@
                               <span class="footer__link">Board</span>
                             </a>
                           </li><li class="">
-                            <a href="../sub/BoardDetail.html">
-                              <span class="footer__link">Board Detail</span>
-                            </a>
-                          </li><li class="">
                             <a href="../sub/Contact.html">
                               <span class="footer__link">Contact</span>
                             </a>
@@ -717,6 +704,7 @@
     <!-- 스크립트 -->
     <script defer src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
     <script defer src="../assets/js/vendor/swiper.js"></script>
+    <script defer src="https://cdn.jsdelivr.net/npm/sweetalert2@11.4.10/dist/sweetalert2.min.js"></script>
     <script defer src="../assets/js/custom/ui.js"></script>
     <!-- 스크립트 eee -->
   </body></html>
