--- a/sub/MarketingStrategy.html
+++ b/sub/MarketingStrategy.html
@@ -13,10 +13,11 @@
     <meta name="keywords" content="">
     <!-- 스타일 -->
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/sweetalert2@11.4.10/dist/sweetalert2.min.css">
     <link rel="stylesheet" href="../assets/css/ui.css">
 
     <!-- 스타일 eee -->
-  <link rel="stylesheet" href="/_custom/index.8a5a7005.css" /></head>
+  <link rel="stylesheet" href="/_custom/index.7795d686.css" /></head>
   <body>
     <main id="marketing-stategy" class="marketing-stategy">
       <div id="wrap" class="undefined">
@@ -137,10 +138,6 @@
                                 Board
                               </a>
                             </li><li>
-                              <a href="../sub/BoardDetail.html">
-                                Board Detail
-                              </a>
-                            </li><li>
                               <a href="../sub/Contact.html">
                                 Contact
                               </a>
@@ -252,10 +249,6 @@
                               Board
                             </a>
                           </li><li>
-                            <a class="" href="../sub/BoardDetail.html">
-                              Board Detail
-                            </a>
-                          </li><li>
                             <a class="" href="../sub/Contact.html">
                               Contact
                             </a>
@@ -279,7 +272,11 @@
         <article>
           <p class="sub-banner-tit f-pop">Marketing Stategy</p>
         </article>
-        <p class="sub-banner-txt">임상 연구에서 가장 중요한 모집자에 대한 건강 데이터 제공</p>
+        
+              <p class="sub-banner-txt is-tab-hide">임상 연구에서 가장 중요한 모집자에 대한 건강 데이터 제공</p>
+              <p class="sub-banner-txt is-tab-show">임상 연구에서 가장 중요한
+모집자에 대한 건강 데이터 제공</p>
+            
         <!-- <img class="" src=`${bannerItem.img}` alt="" /> -->
       </div>
     </div>
@@ -344,7 +341,7 @@
   </div>
   <div class="st-ms-bottom-wrap">
     <div class="inner">
-      <p class="sub-page-ttl type-sm type-wh" data-aos="fade-up" data-aos-duration="1000">
+      <p class="sub-page-ttl type-sm type-wh f-pop" data-aos="fade-up" data-aos-duration="1000">
         Integrated <br class="mb-show">data platform
       </p>
       <p class="sub-page-desc type-wh" data-aos="fade-up" data-aos-duration="1000">
@@ -516,10 +513,6 @@
                               <span class="footer__link">Board</span>
                             </a>
                           </li><li class="">
-                            <a href="../sub/BoardDetail.html">
-                              <span class="footer__link">Board Detail</span>
-                            </a>
-                          </li><li class="">
                             <a href="../sub/Contact.html">
                               <span class="footer__link">Contact</span>
                             </a>
@@ -545,6 +538,7 @@
     <!-- 스크립트 -->
     <script defer src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
     <script defer src="../assets/js/vendor/swiper.js"></script>
+    <script defer src="https://cdn.jsdelivr.net/npm/sweetalert2@11.4.10/dist/sweetalert2.min.js"></script>
     <script defer src="../assets/js/custom/ui.js"></script>
     <!-- 스크립트 eee -->
   </body></html>
