--- a/sub/SimpleModel.html
+++ b/sub/SimpleModel.html
@@ -13,10 +13,11 @@
     <meta name="keywords" content="">
     <!-- 스타일 -->
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/sweetalert2@11.4.10/dist/sweetalert2.min.css">
     <link rel="stylesheet" href="../assets/css/ui.css">
 
     <!-- 스타일 eee -->
-  <link rel="stylesheet" href="/_custom/index.8a5a7005.css" /></head>
+  <link rel="stylesheet" href="/_custom/index.7795d686.css" /></head>
   <body>
     <main id="MedilmmCAD" class="MedilmmCAD">
       <div id="wrap" class="undefined">
@@ -137,10 +138,6 @@
                                 Board
                               </a>
                             </li><li>
-                              <a href="../sub/BoardDetail.html">
-                                Board Detail
-                              </a>
-                            </li><li>
                               <a href="../sub/Contact.html">
                                 Contact
                               </a>
@@ -252,10 +249,6 @@
                               Board
                             </a>
                           </li><li>
-                            <a class="" href="../sub/BoardDetail.html">
-                              Board Detail
-                            </a>
-                          </li><li>
                             <a class="" href="../sub/Contact.html">
                               Contact
                             </a>
@@ -277,11 +270,11 @@
     <div class="wrap">
       <div class="div" data-aos="fade-up" data-aos-delay="0" data-aos-duration="1000">
         <article>
-          <p class="sub-banner-tit f-pop">SimpleModel</p>
+          <p class="sub-banner-tit f-pop">Simple Model</p>
         </article>
         
-              <p class="sub-banner-txt is-tab-hide">추가적인 학습 데이터가 없어도 스스로 학습하는 유사 데이터 라벨링 기법
-학습 데이터의 정확도를 자체적으로 높이는 드롭아웃 방식 활용</p>
+              <p class="sub-banner-txt is-tab-hide">추가적인 학습 데이터가 없어도 스스로 학습하는 유사 데이터 라벨링 기법 학습 데이터의 정확도를 
+자체적으로 높이는 드롭아웃 방식 활용</p>
               <p class="sub-banner-txt is-tab-show">스스로 학습하는 유사 데이터 라벨링 기법 학습 데이터의
 정확도를 자체적으로 높이는 드롭아웃 방식 활용</p>
             
@@ -337,6 +330,7 @@
           <div class="image-cnt" data-aos="fade-up" data-aos-delay="300" data-aos-duration="1000">
             <img class="image-default" src="../assets/images/p1_1.webp" alt="">
             <img class="image-hover" src="../assets/images/p1_1_gif.gif" alt="Hover Image">
+            <img class="imgae-mo is-tab-show" src="../assets/images/mo_p1_1.gif" alt="">
           </div>
           <h2 class="f-pop" data-aos="fade-up" data-aos-delay="0" data-aos-duration="1000">
             Similar Data <br>
@@ -346,7 +340,7 @@
             추가적인 학습 데이터가 없어도 스스로 <br>
             학습하는 유사 데이터 라벨링 기법
           </p>
-          <button data-aos="fade-up" data-aos-delay="600" data-aos-duration="1000">See More +</button>
+          <button class="f-pop" data-aos="fade-up" data-aos-delay="600" data-aos-duration="1000">See More +</button>
         </a>
       </li>
       <li class="card" data-aos="fade-up" data-aos-delay="200" data-aos-duration="1000">
@@ -354,6 +348,7 @@
           <div class="image-cnt" data-aos="fade-up" data-aos-delay="300" data-aos-duration="1000">
             <img class="image-default" src="../assets/images/p1_2.webp" alt="">
             <img class="image-hover" src="../assets/images/p1_2_gif.gif" alt="Hover Image">
+            <img class="imgae-mo is-tab-show" src="../assets/images/mo_p1_2.gif" alt="">
           </div>
 
           <h2 class="f-pop" data-aos="fade-up" data-aos-delay="0" data-aos-duration="1000">Dropout Method</h2>
@@ -362,7 +357,7 @@
             드롭아웃 방식 활용으로 과적합 방지 <br>
             앙상블 효과 계산 효율성 증대
           </p>
-          <button data-aos="fade-up" data-aos-delay="600" data-aos-duration="1000">See More +</button>
+          <button class="f-pop" data-aos="fade-up" data-aos-delay="600" data-aos-duration="1000">See More +</button>
         </a>
       </li>
       <li class="card" data-aos="fade-up" data-aos-delay="0" data-aos-duration="1000">
@@ -370,6 +365,7 @@
           <div class="image-cnt" data-aos="fade-up" data-aos-delay="300" data-aos-duration="1000">
             <img class="image-default" src="../assets/images/p1_3.webp" alt="">
             <img class="image-hover" src="../assets/images/p1_3_gif.gif" alt="Hover Image">
+            <img class="imgae-mo is-tab-show" src="../assets/images/mo_p1_3.gif" alt="">
           </div>
           <h2 class="f-pop" data-aos="fade-up" data-aos-delay="0" data-aos-duration="1000">NLU Model</h2>
           <p data-aos="fade-up" data-aos-delay="0" data-aos-duration="1000">
@@ -377,7 +373,7 @@
             성능이 확인된 모델로 세 가지 <br>
             Task에서 우수한 결과 도출
           </p>
-          <button data-aos="fade-up" data-aos-delay="600" data-aos-duration="1000">See More +</button>
+          <button class="f-pop" data-aos="fade-up" data-aos-delay="600" data-aos-duration="1000">See More +</button>
         </a>
       </li>
     </ul>
@@ -534,10 +530,6 @@
                               <span class="footer__link">Board</span>
                             </a>
                           </li><li class="">
-                            <a href="../sub/BoardDetail.html">
-                              <span class="footer__link">Board Detail</span>
-                            </a>
-                          </li><li class="">
                             <a href="../sub/Contact.html">
                               <span class="footer__link">Contact</span>
                             </a>
@@ -563,6 +555,7 @@
     <!-- 스크립트 -->
     <script defer src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
     <script defer src="../assets/js/vendor/swiper.js"></script>
+    <script defer src="https://cdn.jsdelivr.net/npm/sweetalert2@11.4.10/dist/sweetalert2.min.js"></script>
     <script defer src="../assets/js/custom/ui.js"></script>
     <!-- 스크립트 eee -->
   </body></html>
