--- a/sub/UVLTransformer.html
+++ b/sub/UVLTransformer.html
@@ -13,10 +13,11 @@
     <meta name="keywords" content="">
     <!-- 스타일 -->
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/sweetalert2@11.4.10/dist/sweetalert2.min.css">
     <link rel="stylesheet" href="../assets/css/ui.css">
 
     <!-- 스타일 eee -->
-  <link rel="stylesheet" href="/_custom/index.8a5a7005.css" /></head>
+  <link rel="stylesheet" href="/_custom/index.7795d686.css" /></head>
   <body>
     <main id="UVLTransformer" class="UVLTransformer">
       <div id="wrap" class="undefined">
@@ -137,10 +138,6 @@
                                 Board
                               </a>
                             </li><li>
-                              <a href="../sub/BoardDetail.html">
-                                Board Detail
-                              </a>
-                            </li><li>
                               <a href="../sub/Contact.html">
                                 Contact
                               </a>
@@ -252,10 +249,6 @@
                               Board
                             </a>
                           </li><li>
-                            <a class="" href="../sub/BoardDetail.html">
-                              Board Detail
-                            </a>
-                          </li><li>
                             <a class="" href="../sub/Contact.html">
                               Contact
                             </a>
@@ -277,9 +270,9 @@
     <div class="wrap">
       <div class="div" data-aos="fade-up" data-aos-delay="0" data-aos-duration="1000">
         <article>
-          <p class="sub-banner-tit f-pop">UVLTransformer</p>
+          <p class="sub-banner-tit f-pop">UVL Transformer</p>
         </article>
-        <p class="sub-banner-txt">CADTM<em><sup>TM</sup></em>의 두번째 기초 기술</p>
+        <p class="sub-banner-txt">CAD<em><sup>TM</sup></em>의 두번째 기초 기술</p>
         <!-- <img class="" src=`${bannerItem.img}` alt="" /> -->
       </div>
     </div>
@@ -536,10 +529,6 @@
                               <span class="footer__link">Board</span>
                             </a>
                           </li><li class="">
-                            <a href="../sub/BoardDetail.html">
-                              <span class="footer__link">Board Detail</span>
-                            </a>
-                          </li><li class="">
                             <a href="../sub/Contact.html">
                               <span class="footer__link">Contact</span>
                             </a>
@@ -565,6 +554,7 @@
     <!-- 스크립트 -->
     <script defer src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
     <script defer src="../assets/js/vendor/swiper.js"></script>
+    <script defer src="https://cdn.jsdelivr.net/npm/sweetalert2@11.4.10/dist/sweetalert2.min.js"></script>
     <script defer src="../assets/js/custom/ui.js"></script>
     <!-- 스크립트 eee -->
   </body></html>
