--- a/index.html
+++ b/index.html
@@ -13,10 +13,11 @@
     <meta name="keywords" content="">
     <!-- 스타일 -->
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/sweetalert2@11.4.10/dist/sweetalert2.min.css">
     <link rel="stylesheet" href="./assets/css/ui.css">
 
     <!-- 스타일 eee -->
-  <link rel="stylesheet" href="/_custom/index.8a5a7005.css" /></head>
+  <link rel="stylesheet" href="/_custom/index.7795d686.css" /></head>
   <body>
     <main id="main" class="main">
       <div id="wrap" class="undefined">
@@ -137,10 +138,6 @@
                                 Board
                               </a>
                             </li><li>
-                              <a href="./sub/BoardDetail.html">
-                                Board Detail
-                              </a>
-                            </li><li>
                               <a href="./sub/Contact.html">
                                 Contact
                               </a>
@@ -252,10 +249,6 @@
                               Board
                             </a>
                           </li><li>
-                            <a class="" href="./sub/BoardDetail.html">
-                              Board Detail
-                            </a>
-                          </li><li>
                             <a class="" href="./sub/Contact.html">
                               Contact
                             </a>
@@ -315,14 +308,15 @@
             <div class="image-cnt" data-aos="fade-up" data-aos-delay="300" data-aos-duration="1000">
               <img class="image-default" src="assets/images/s1_1.webp" loading="lazy" alt="">
               <img class="image-hover" src="assets/images/s1_1_gif.gif" alt="Hover Image">
+              <!-- <img class="imgae-mo is-tab-show" src="assets/images/mo_s1_1.gif" alt="" /> -->
             </div>
-            <h2 data-aos="fade-up" data-aos-delay="400" data-aos-duration="1000">SimPLE Modal</h2>
+            <h2 data-aos="fade-up" data-aos-delay="400" data-aos-duration="1000">SimPLE Model</h2>
             <p data-aos="fade-up" data-aos-delay="500" data-aos-duration="1000">
               기존의 한정적인 데이터 처리와 AI 기술을 <br>
               뛰어넘어 멀티 모달 데이터를 수집, 변환 처리 <br>
               최신 생성형 AI 기술에 최적화
             </p>
-            <button data-aos="fade-up" data-aos-delay="600" data-aos-duration="1000">See More +</button>
+            <button class="f-pop" data-aos="fade-up" data-aos-delay="600" data-aos-duration="1000">See More +</button>
           </a>
         </li>
         <li class="card" data-aos="fade-up" data-aos-delay="200" data-aos-duration="1000">
@@ -330,15 +324,18 @@
             <div class="image-cnt" data-aos="fade-up" data-aos-delay="300" data-aos-duration="1000">
               <img class="image-default" src="assets/images/s1_2.webp" loading="lazy" alt="">
               <img class="image-hover" src="assets/images/s1_2_gif.gif" alt="Hover Image">
+              <!-- <img class="imgae-mo is-tab-show" src="assets/images/mo_s1_2.gif" alt="" /> -->
             </div>
 
-            <h2 data-aos="fade-up" data-aos-delay="400" data-aos-duration="1000">CAD Catch<sup>TM</sup></h2>
+            <h2 class="f-pop" data-aos="fade-up" data-aos-delay="400" data-aos-duration="1000">
+              CAD Catch<sup>TM</sup>
+            </h2>
             <p data-aos="fade-up" data-aos-delay="500" data-aos-duration="1000">
               이미지, 영상을 텍스트와 결합한 <br>
               멀티 모달 데이터를 생성형 AI에 의해 <br>
               다양하게 분석 가능
             </p>
-            <button data-aos="fade-up" data-aos-delay="600" data-aos-duration="1000">See More +</button>
+            <button class="f-pop" data-aos="fade-up" data-aos-delay="600" data-aos-duration="1000">See More +</button>
           </a>
         </li>
         <li class="card" data-aos="fade-up" data-aos-delay="400" data-aos-duration="1000">
@@ -346,6 +343,7 @@
             <div class="image-cnt" data-aos="fade-up" data-aos-delay="300" data-aos-duration="1000">
               <img class="image-default" src="assets/images/s1_3.webp" loading="lazy" alt="">
               <img class="image-hover" src="assets/images/s1_3_gif.gif" alt="Hover Image">
+              <!-- <img class="imgae-mo is-tab-show" src="assets/images/mo_s1_3.gif" alt="" /> -->
             </div>
             <h2 data-aos="fade-up" data-aos-delay="400" data-aos-duration="1000">UVL Transformer</h2>
             <p data-aos="fade-up" data-aos-delay="500" data-aos-duration="1000">
@@ -353,7 +351,7 @@
               경량화 및 파인튜닝된 LMM을 바탕으로 <br>
               메디컬 도메인에 특화된 솔루션 제공
             </p>
-            <button data-aos="fade-up" data-aos-delay="600" data-aos-duration="1000">See More +</button>
+            <button class="f-pop" data-aos="fade-up" data-aos-delay="600" data-aos-duration="1000">See More +</button>
           </a>
         </li>
       </ul>
@@ -495,10 +493,6 @@
                               <span class="footer__link">Board</span>
                             </a>
                           </li><li class="">
-                            <a href="./sub/BoardDetail.html">
-                              <span class="footer__link">Board Detail</span>
-                            </a>
-                          </li><li class="">
                             <a href="./sub/Contact.html">
                               <span class="footer__link">Contact</span>
                             </a>
@@ -524,6 +518,7 @@
     <!-- 스크립트 -->
     <script defer src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
     <script defer src="./assets/js/vendor/swiper.js"></script>
+    <script defer src="https://cdn.jsdelivr.net/npm/sweetalert2@11.4.10/dist/sweetalert2.min.js"></script>
     <script defer src="./assets/js/custom/ui.js"></script>
     <!-- 스크립트 eee -->
   </body></html>
