--- a/sub/AboutMediLMM.html
+++ b/sub/AboutMediLMM.html
@@ -13,10 +13,11 @@
     <meta name="keywords" content="">
     <!-- 스타일 -->
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/sweetalert2@11.4.10/dist/sweetalert2.min.css">
     <link rel="stylesheet" href="../assets/css/ui.css">
 
     <!-- 스타일 eee -->
-  <link rel="stylesheet" href="/_custom/index.8a5a7005.css" /></head>
+  <link rel="stylesheet" href="/_custom/index.7795d686.css" /></head>
   <body>
     <main id="AboutMediLMM" class="AboutMediLMM">
       <div id="wrap" class="undefined">
@@ -137,10 +138,6 @@
                                 Board
                               </a>
                             </li><li>
-                              <a href="../sub/BoardDetail.html">
-                                Board Detail
-                              </a>
-                            </li><li>
                               <a href="../sub/Contact.html">
                                 Contact
                               </a>
@@ -252,10 +249,6 @@
                               Board
                             </a>
                           </li><li>
-                            <a class="" href="../sub/BoardDetail.html">
-                              Board Detail
-                            </a>
-                          </li><li>
                             <a class="" href="../sub/Contact.html">
                               Contact
                             </a>
@@ -279,8 +272,7 @@
         <article>
           <p class="sub-banner-tit f-pop">About MediLMM</p>
         </article>
-        <p class="sub-banner-txt">이미지 / 영상을 텍스트와 결합한 멀티 모달 데이터를
-생성형 AI에 의해 다양하게 분석 가능</p>
+        <p class="sub-banner-txt">이미지 / 영상을 텍스트와 결합한 멀티 모달 데이터를 생성형 AI에 의해 다양하게 분석 가능</p>
         <!-- <img class="" src=`${bannerItem.img}` alt="" /> -->
       </div>
     </div>
@@ -503,10 +495,6 @@
                               <span class="footer__link">Board</span>
                             </a>
                           </li><li class="">
-                            <a href="../sub/BoardDetail.html">
-                              <span class="footer__link">Board Detail</span>
-                            </a>
-                          </li><li class="">
                             <a href="../sub/Contact.html">
                               <span class="footer__link">Contact</span>
                             </a>
@@ -532,6 +520,7 @@
     <!-- 스크립트 -->
     <script defer src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
     <script defer src="../assets/js/vendor/swiper.js"></script>
+    <script defer src="https://cdn.jsdelivr.net/npm/sweetalert2@11.4.10/dist/sweetalert2.min.js"></script>
     <script defer src="../assets/js/custom/ui.js"></script>
     <!-- 스크립트 eee -->
   </body></html>
