--- a/sub/BusinessStrategy.html
+++ b/sub/BusinessStrategy.html
@@ -13,10 +13,11 @@
     <meta name="keywords" content="">
     <!-- 스타일 -->
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/sweetalert2@11.4.10/dist/sweetalert2.min.css">
     <link rel="stylesheet" href="../assets/css/ui.css">
 
     <!-- 스타일 eee -->
-  <link rel="stylesheet" href="/_custom/index.8a5a7005.css" /></head>
+  <link rel="stylesheet" href="/_custom/index.7795d686.css" /></head>
   <body>
     <main id="board" class="board">
       <div id="wrap" class="undefined">
@@ -137,10 +138,6 @@
                                 Board
                               </a>
                             </li><li>
-                              <a href="../sub/BoardDetail.html">
-                                Board Detail
-                              </a>
-                            </li><li>
                               <a href="../sub/Contact.html">
                                 Contact
                               </a>
@@ -252,10 +249,6 @@
                               Board
                             </a>
                           </li><li>
-                            <a class="" href="../sub/BoardDetail.html">
-                              Board Detail
-                            </a>
-                          </li><li>
                             <a class="" href="../sub/Contact.html">
                               Contact
                             </a>
@@ -279,8 +272,12 @@
         <article>
           <p class="sub-banner-tit f-pop">Business Stategy</p>
         </article>
-        <p class="sub-banner-txt">Cleansing&amp;Analysis Data를 제약회사와 연구기관, CRO로 전송하여
+        
+              <p class="sub-banner-txt is-tab-hide">Cleansing&amp;Analysis Data를 제약회사와 연구기관, CRO로 전송하여
 임상시험 데이터 시장과 CRO 서비스 시장으로 메디렘 기술 도입</p>
+              <p class="sub-banner-txt is-tab-show">Cleansing&amp;Analysis Data를 활용한 임상시험 데이터
+시장과 CRO 서비스 시장으로 메디렘 기술 도입</p>
+            
         <!-- <img class="" src=`${bannerItem.img}` alt="" /> -->
       </div>
     </div>
@@ -578,10 +575,6 @@
                               <span class="footer__link">Board</span>
                             </a>
                           </li><li class="">
-                            <a href="../sub/BoardDetail.html">
-                              <span class="footer__link">Board Detail</span>
-                            </a>
-                          </li><li class="">
                             <a href="../sub/Contact.html">
                               <span class="footer__link">Contact</span>
                             </a>
@@ -607,6 +600,7 @@
     <!-- 스크립트 -->
     <script defer src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
     <script defer src="../assets/js/vendor/swiper.js"></script>
+    <script defer src="https://cdn.jsdelivr.net/npm/sweetalert2@11.4.10/dist/sweetalert2.min.js"></script>
     <script defer src="../assets/js/custom/ui.js"></script>
     <!-- 스크립트 eee -->
   </body></html>
