--- a/sub/CADWrap.html
+++ b/sub/CADWrap.html
@@ -13,10 +13,11 @@
     <meta name="keywords" content="">
     <!-- 스타일 -->
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/sweetalert2@11.4.10/dist/sweetalert2.min.css">
     <link rel="stylesheet" href="../assets/css/ui.css">
 
     <!-- 스타일 eee -->
-  <link rel="stylesheet" href="/_custom/index.8a5a7005.css" /></head>
+  <link rel="stylesheet" href="/_custom/index.7795d686.css" /></head>
   <body>
     <main id="CADWrap" class="CADWrap">
       <div id="wrap" class="undefined">
@@ -137,10 +138,6 @@
                                 Board
                               </a>
                             </li><li>
-                              <a href="../sub/BoardDetail.html">
-                                Board Detail
-                              </a>
-                            </li><li>
                               <a href="../sub/Contact.html">
                                 Contact
                               </a>
@@ -252,10 +249,6 @@
                               Board
                             </a>
                           </li><li>
-                            <a class="" href="../sub/BoardDetail.html">
-                              Board Detail
-                            </a>
-                          </li><li>
                             <a class="" href="../sub/Contact.html">
                               Contact
                             </a>
@@ -279,11 +272,7 @@
         <article>
           <p class="sub-banner-tit on f-pop">CAD Warp</p>
         </article>
-        
-              <p class="sub-banner-txt is-tab-hide">CRO 프로세스를 대화형 AI로 시간 및 공수를
-획기적으로 줄인 자동화 인텔리전스 시스템</p>
-              <p class="sub-banner-txt is-tab-show">CADTM의 두번째 기초 기술</p>
-            
+        <p class="sub-banner-txt">CRO 프로세스를 대화형 AI로 시간 및 공수를 획기적으로 줄인 자동화 인텔리전스 시스템</p>
         <!-- <img class="" src=`${bannerItem.img}` alt="" /> -->
       </div>
     </div>
@@ -347,15 +336,18 @@
 
       <ul class="mana-platform-list">
         <li data-aos="fade-up" data-aos-delay="100" data-aos-duration="1000">
-          <img class="" src="../assets/images/p4_s1_icon1.webp" alt="">
+          <img class="is-tab-hide" src="../assets/images/p4_s1_icon1.webp" alt="">
+          <img class="is-tab-show" src="../assets/images/mo_p4_s1_icon1.webp" alt="">
           <p class="txt">각 프로세스마다 개별 <br class="is-tab-hide"> LMM이 작동</p>
         </li>
         <li data-aos="fade-up" data-aos-delay="200" data-aos-duration="1000">
-          <img class="" src="../assets/images/p4_s1_icon2.webp" alt="">
+          <img class="is-tab-hide" src="../assets/images/p4_s1_icon2.webp" alt="">
+          <img class="is-tab-show" src="../assets/images/mo_p4_s1_icon2.webp" alt="">
           <p class="txt">모든 프로세스가 유기적으로 <br> 연결되어 업무 효율 극대화</p>
         </li>
         <li data-aos="fade-up" data-aos-delay="300" data-aos-duration="1000">
-          <img class="" src="../assets/images/p4_s1_icon3.webp" alt="">
+          <img class="is-tab-hide" src="../assets/images/p4_s1_icon3.webp" alt="">
+          <img class="is-tab-show" src="../assets/images/mo_p4_s1_icon3.webp" alt="">
           <p class="txt">이전 프로세스의 아웃풋이 <br> 다음 인풋에 저장되어 활용</p>
         </li>
       </ul>
@@ -462,10 +454,18 @@
                 <span class="participant-count">CAD-Warp <sup>TM</sup> PL</span>
               </div>
               <div class="process-step" data-aos="fade-right" data-aos-delay="500" data-aos-duration="1000">
+                <div class="is-tab-show">
+                  <div class="is-tab-hide"><i class="icon icon-arrow scroll-horizontal-img"></i></div>
+                  <div class="icon-bottom is-tab-show"><i class="icon icon-arrow scroll-horizontal-img"></i></div>
+                </div>
                 <div class="step-content">
                   <img class="" src="../assets/images/p4_s2_cad.webp" alt="">
                 </div>
                 <span class="participant-count">CAD-Warp <sup>TM</sup> SM</span>
+              </div>
+              <div class="process-step is-tab-show" data-aos="fade-right" data-aos-delay="500" data-aos-duration="1000">
+                <span style="font-size:14px;font-weight:600;line-height:23px;">
+                  메디렘 CAD-Warp<sup style="font-size:10px;">TM</sup> 시스템에 의한 <br> 임상실험의 자동화</span>
               </div>
             </div>
           </div>
@@ -626,10 +626,6 @@
                               <span class="footer__link">Board</span>
                             </a>
                           </li><li class="">
-                            <a href="../sub/BoardDetail.html">
-                              <span class="footer__link">Board Detail</span>
-                            </a>
-                          </li><li class="">
                             <a href="../sub/Contact.html">
                               <span class="footer__link">Contact</span>
                             </a>
@@ -655,6 +651,7 @@
     <!-- 스크립트 -->
     <script defer src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
     <script defer src="../assets/js/vendor/swiper.js"></script>
+    <script defer src="https://cdn.jsdelivr.net/npm/sweetalert2@11.4.10/dist/sweetalert2.min.js"></script>
     <script defer src="../assets/js/custom/ui.js"></script>
     <!-- 스크립트 eee -->
   </body></html>
