--- a/sub/MultiModalData.html
+++ b/sub/MultiModalData.html
@@ -13,10 +13,11 @@
     <meta name="keywords" content="">
     <!-- 스타일 -->
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/sweetalert2@11.4.10/dist/sweetalert2.min.css">
     <link rel="stylesheet" href="../assets/css/ui.css">
 
     <!-- 스타일 eee -->
-  <link rel="stylesheet" href="/_custom/index.8a5a7005.css" /></head>
+  <link rel="stylesheet" href="/_custom/index.7795d686.css" /></head>
   <body>
     <main id="MultiModalData" class="MultiModalData">
       <div id="wrap" class="undefined">
@@ -137,10 +138,6 @@
                                 Board
                               </a>
                             </li><li>
-                              <a href="../sub/BoardDetail.html">
-                                Board Detail
-                              </a>
-                            </li><li>
                               <a href="../sub/Contact.html">
                                 Contact
                               </a>
@@ -252,10 +249,6 @@
                               Board
                             </a>
                           </li><li>
-                            <a class="" href="../sub/BoardDetail.html">
-                              Board Detail
-                            </a>
-                          </li><li>
                             <a class="" href="../sub/Contact.html">
                               Contact
                             </a>
@@ -331,10 +324,8 @@
         </p>
       </div>
       <div class="mt50">
-        <picture>
-          <source media="(min-width: 600px)" srcset="../assets/images/p1_s1_1.webp">
-          <img data-aos="fade-up" data-aos-duration="1000" src="../assets/images/p1_s1_1_mo.jpg" alt="">
-        </picture>
+        <img data-aos="fade-up" data-aos-duration="1000" class="is-mo-hide" src="../assets/images/p1_s1_1.webp" alt="" style="width:100%">
+        <img data-aos="fade-up" data-aos-duration="1000" class="is-mo-show" src="../assets/images/p1_s1_1_mo.webp" alt="">
       </div>
 
       <div data-aos="fade-up" data-aos-delay="" data-aos-duration="1000" class="sub-title-wrap mt80">
@@ -393,7 +384,7 @@
           </li>
         </ul>
 
-        <img data-aos="fade-up" data-aos-duration="1000" class="web-w100 is-mo-hide" src="../assets/images/p1_s2_1.webp" alt="">
+        <img data-aos="fade-up" data-aos-duration="1000" class="web-w100 is-mo-hide" src="../assets/images/p1_s2_1.webp" style="width:100%" alt="">
         <img data-aos="fade-up" data-aos-duration="1000" class="is-mo-show" src="../assets/images/mo_p1_s2_1.png" alt="">
 
         <div data-aos="fade-up" data-aos-delay="0" data-aos-duration="1000" class="btn is-mo-hide">
@@ -538,10 +529,6 @@
                               <span class="footer__link">Board</span>
                             </a>
                           </li><li class="">
-                            <a href="../sub/BoardDetail.html">
-                              <span class="footer__link">Board Detail</span>
-                            </a>
-                          </li><li class="">
                             <a href="../sub/Contact.html">
                               <span class="footer__link">Contact</span>
                             </a>
@@ -567,6 +554,7 @@
     <!-- 스크립트 -->
     <script defer src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
     <script defer src="../assets/js/vendor/swiper.js"></script>
+    <script defer src="https://cdn.jsdelivr.net/npm/sweetalert2@11.4.10/dist/sweetalert2.min.js"></script>
     <script defer src="../assets/js/custom/ui.js"></script>
     <!-- 스크립트 eee -->
   </body></html>
