--- a/sub/OurPlatform.html
+++ b/sub/OurPlatform.html
@@ -13,10 +13,11 @@
     <meta name="keywords" content="">
     <!-- 스타일 -->
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/sweetalert2@11.4.10/dist/sweetalert2.min.css">
     <link rel="stylesheet" href="../assets/css/ui.css">
 
     <!-- 스타일 eee -->
-  <link rel="stylesheet" href="/_custom/index.8a5a7005.css" /></head>
+  <link rel="stylesheet" href="/_custom/index.7795d686.css" /></head>
   <body>
     <main id="Our Platform" class="Our Platform">
       <div id="wrap" class="undefined">
@@ -137,10 +138,6 @@
                                 Board
                               </a>
                             </li><li>
-                              <a href="../sub/BoardDetail.html">
-                                Board Detail
-                              </a>
-                            </li><li>
                               <a href="../sub/Contact.html">
                                 Contact
                               </a>
@@ -252,10 +249,6 @@
                               Board
                             </a>
                           </li><li>
-                            <a class="" href="../sub/BoardDetail.html">
-                              Board Detail
-                            </a>
-                          </li><li>
                             <a class="" href="../sub/Contact.html">
                               Contact
                             </a>
@@ -280,8 +273,8 @@
           <p class="sub-banner-tit f-pop">Our Platform</p>
         </article>
         
-              <p class="sub-banner-txt is-tab-hide">메디렘 CAD 플랫폼은 UVL트랜스포머와 MIT의 SimPLE로 경량화 및
-파인튜닝된 LMM을 바탕으로 메디컬 도메인에 특화된 Generative AI 솔루션을 제공</p>
+              <p class="sub-banner-txt is-tab-hide">메디렘 CAD 플랫폼은 UVL트랜스포머와 MIT의 SimPLE로 경량화 및 파인튜닝된 LMM을 바탕으로 메디컬 
+도메인에 특화된 Generative AI 솔루션을 제공</p>
               <p class="sub-banner-txt is-tab-show">UVL트랜스포머와 SimPLE을 활용한 LMM을 바탕으로
 메디컬 도메인에 특화된 Generative AI 솔루션 제공</p>
             
@@ -569,10 +562,6 @@
                               <span class="footer__link">Board</span>
                             </a>
                           </li><li class="">
-                            <a href="../sub/BoardDetail.html">
-                              <span class="footer__link">Board Detail</span>
-                            </a>
-                          </li><li class="">
                             <a href="../sub/Contact.html">
                               <span class="footer__link">Contact</span>
                             </a>
@@ -598,6 +587,7 @@
     <!-- 스크립트 -->
     <script defer src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
     <script defer src="../assets/js/vendor/swiper.js"></script>
+    <script defer src="https://cdn.jsdelivr.net/npm/sweetalert2@11.4.10/dist/sweetalert2.min.js"></script>
     <script defer src="../assets/js/custom/ui.js"></script>
     <!-- 스크립트 eee -->
   </body></html>
