--- a/sub/SimpleModel.html
+++ b/sub/SimpleModel.html
@@ -330,7 +330,7 @@
           <div class="image-cnt" data-aos="fade-up" data-aos-delay="300" data-aos-duration="1000">
             <img class="image-default" src="../assets/images/p1_1.webp" alt="">
             <img class="image-hover" src="../assets/images/p1_1_gif.gif" alt="Hover Image">
-            <img class="imgae-mo is-tab-show" src="../assets/images/mo_p1_1.gif" alt="">
+            <!-- <img class="imgae-mo is-tab-show" src="../assets/images/mo_p1_1.gif" alt="" /> -->
           </div>
           <h2 class="f-pop" data-aos="fade-up" data-aos-delay="0" data-aos-duration="1000">
             Similar Data <br>
@@ -348,7 +348,7 @@
           <div class="image-cnt" data-aos="fade-up" data-aos-delay="300" data-aos-duration="1000">
             <img class="image-default" src="../assets/images/p1_2.webp" alt="">
             <img class="image-hover" src="../assets/images/p1_2_gif.gif" alt="Hover Image">
-            <img class="imgae-mo is-tab-show" src="../assets/images/mo_p1_2.gif" alt="">
+            <!-- <img class="imgae-mo is-tab-show" src="../assets/images/mo_p1_2.gif" alt="" /> -->
           </div>
 
           <h2 class="f-pop" data-aos="fade-up" data-aos-delay="0" data-aos-duration="1000">Dropout Method</h2>
@@ -365,7 +365,7 @@
           <div class="image-cnt" data-aos="fade-up" data-aos-delay="300" data-aos-duration="1000">
             <img class="image-default" src="../assets/images/p1_3.webp" alt="">
             <img class="image-hover" src="../assets/images/p1_3_gif.gif" alt="Hover Image">
-            <img class="imgae-mo is-tab-show" src="../assets/images/mo_p1_3.gif" alt="">
+            <!-- <img class="imgae-mo is-tab-show" src="../assets/images/mo_p1_3.gif" alt="" /> -->
           </div>
           <h2 class="f-pop" data-aos="fade-up" data-aos-delay="0" data-aos-duration="1000">NLU Model</h2>
           <p data-aos="fade-up" data-aos-delay="0" data-aos-duration="1000">
