--- a/index.html
+++ b/index.html
@@ -266,8 +266,8 @@
             
   
   <section class="visual">
-    <div class="video-container">
-      <video class="visual__video is-mo-hide" autoplay loop muted preload="none">
+    <div class="video-container" id="videoContainer">
+      <video class="visual__video video1 is-mo-hide" autoplay loop muted preload="none">
         <source class="is-mo-hide" src="assets/video/main.mp4" type="video/mp4">
       </video>
       <!-- <video
@@ -304,7 +304,7 @@
 
       <ul class="card-list flx col33">
         <li class="card" data-aos="fade-up" data-aos-delay="0" data-aos-duration="1000">
-          <a href="../sub/SimpleModel.html">
+          <a href="sub/SimpleModel.html">
             <div class="image-cnt" data-aos="fade-up" data-aos-delay="300" data-aos-duration="1000">
               <img class="image-default" src="assets/images/s1_1.webp" loading="lazy" alt="">
               <img class="image-hover" src="assets/images/s1_1_gif.gif" alt="Hover Image">
@@ -320,7 +320,7 @@
           </a>
         </li>
         <li class="card" data-aos="fade-up" data-aos-delay="200" data-aos-duration="1000">
-          <a href="../sub/CADCatch.html">
+          <a href="sub/CADCatch.html">
             <div class="image-cnt" data-aos="fade-up" data-aos-delay="300" data-aos-duration="1000">
               <img class="image-default" src="assets/images/s1_2.webp" loading="lazy" alt="">
               <img class="image-hover" src="assets/images/s1_2_gif.gif" alt="Hover Image">
@@ -339,7 +339,7 @@
           </a>
         </li>
         <li class="card" data-aos="fade-up" data-aos-delay="400" data-aos-duration="1000">
-          <a href="../sub/UVLTransformer.html">
+          <a href="sub/UVLTransformer.html">
             <div class="image-cnt" data-aos="fade-up" data-aos-delay="300" data-aos-duration="1000">
               <img class="image-default" src="assets/images/s1_3.webp" loading="lazy" alt="">
               <img class="image-hover" src="assets/images/s1_3_gif.gif" alt="Hover Image">
