--- a/sub/CADCatch.html
+++ b/sub/CADCatch.html
@@ -8,16 +8,16 @@
     <meta property="og:type" content="website">
     <meta property="og:url" content="">
     <meta property="og:title" content="medilmm">
-    <meta property="og:description" content="">
+    <meta name="description" content="UVL 트랜스포머와 MIT의 SimPLE 기술을 활용하여 의료 분야에서 다중 모달 데이터를 위한 최첨단 AI 솔루션을 탐색해보세요. 데이터 처리부터 생성적 AI 애플리케이션까지, 특화된 의료 분야 솔루션을 발견하십시오.">
     <meta property="og:image" content="">
-    <meta name="keywords" content="">
+    <meta name="keywords" content="다중 모달 데이터, AI 기술, 의료 AI, UVL 트랜스포머, MIT SimPLE, 생성형 AI">
     <!-- 스타일 -->
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/sweetalert2@11.4.10/dist/sweetalert2.min.css">
     <link rel="stylesheet" href="../assets/css/ui.css">
 
     <!-- 스타일 eee -->
-  <link rel="stylesheet" href="/_custom/index.7795d686.css" /></head>
+  <link rel="stylesheet" href="/_custom/index.65d60c1e.css" /></head>
   <body>
     <main id="CADCatchTM" class="CADCatchTM">
       <div id="wrap" class="undefined">
@@ -395,7 +395,44 @@
         </div>
 
         <div class="is-tab-show">
-          <img class="pol-l50" src="../assets/images/scadCatch-se02-img.png" alt="">
+          <!-- <img class="pol-l50" src="../assets/images/scadCatch-se02-img.png" alt="" /> -->
+          <div class="mo-data">
+            <div class="title">
+              수집데이터 <span></span> 메디렘 통합 바이오 데이터 뱅크
+            </div>
+            <div class="img">
+              <img class="" src="../assets/images/people-top.png" alt="">
+            </div>
+            <ul>
+              <li>
+                <div class="left">임상 및 <br> 건강정보</div>
+                <div class="right">· 질병정보 · 생활습관 <br> · 건강정보</div>
+              </li>
+              <li>
+                <div class="left">
+                  2차 자료 <br>
+                  연계 정보
+                </div>
+                <div class="right">· 진료, 검진 정보 <br> · 암 등록정보 · 사양정보</div>
+              </li>
+              <li>
+                <div class="left">유전체 정보</div>
+                <div class="right">· WGS(전장) · 유전체칩</div>
+              </li>
+              <li>
+                <div class="left">인체 유래물</div>
+                <div class="right">· 혈액, 체액, 조직, 세포 등</div>
+              </li>
+              <li>
+                <div class="left">라이프로그</div>
+                <div class="right">· PGHD</div>
+              </li>
+              <li>
+                <div class="left">오믹스 정보</div>
+                <div class="right">· 단백체 · 대사체 · 전사체</div>
+              </li>
+            </ul>
+          </div>
         </div>
 
         <div class="tac">
