--- a/sub/OurPlatform.html
+++ b/sub/OurPlatform.html
@@ -8,16 +8,16 @@
     <meta property="og:type" content="website">
     <meta property="og:url" content="">
     <meta property="og:title" content="medilmm">
-    <meta property="og:description" content="">
+    <meta name="description" content="UVL 트랜스포머와 MIT의 SimPLE 기술을 활용하여 의료 분야에서 다중 모달 데이터를 위한 최첨단 AI 솔루션을 탐색해보세요. 데이터 처리부터 생성적 AI 애플리케이션까지, 특화된 의료 분야 솔루션을 발견하십시오.">
     <meta property="og:image" content="">
-    <meta name="keywords" content="">
+    <meta name="keywords" content="다중 모달 데이터, AI 기술, 의료 AI, UVL 트랜스포머, MIT SimPLE, 생성형 AI">
     <!-- 스타일 -->
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/sweetalert2@11.4.10/dist/sweetalert2.min.css">
     <link rel="stylesheet" href="../assets/css/ui.css">
 
     <!-- 스타일 eee -->
-  <link rel="stylesheet" href="/_custom/index.7795d686.css" /></head>
+  <link rel="stylesheet" href="/_custom/index.65d60c1e.css" /></head>
   <body>
     <main id="Our Platform" class="Our Platform">
       <div id="wrap" class="undefined">
