--- a/guide/guide.html
+++ b/guide/guide.html
@@ -157,7 +157,7 @@
                   
                     <tr>
                       <td>7</td>
-                      <td>CADWrap</td>
+                      <td>CADWarp</td>
                       <td></td>
                       <td></td>
                       <td></td>
@@ -167,8 +167,8 @@
                       <td></td>
                       <td>완료</td>
                       <td>
-                        <a href="../sub/CADWrap.html" target="_blank">
-                          CADWrap.html
+                        <a href="../sub/CADWarp.html" target="_blank">
+                          CADWarp.html
                         </a>
                       </td>
                     </tr>
