--- a/index.html
+++ b/index.html
@@ -79,8 +79,8 @@
                                 CAD Catch
                               </a>
                             </li><li>
-                              <a class="on" href="./sub/CADWrap.html">
-                                CAD Wrap
+                              <a class="on" href="./sub/CADWarp.html">
+                                CAD Warp
                               </a>
                             </li>
                       </ul>
@@ -190,8 +190,8 @@
                               CAD Catch
                             </a>
                           </li><li>
-                            <a class="on" href="./sub/CADWrap.html">
-                              CAD Wrap
+                            <a class="on" href="./sub/CADWarp.html">
+                              CAD Warp
                             </a>
                           </li>
                     </ul>
@@ -434,8 +434,8 @@
                               <span class="footer__link">CAD Catch</span>
                             </a>
                           </li><li class="">
-                            <a class="on" href="./sub/CADWrap.html">
-                              <span class="footer__link">CAD Wrap</span>
+                            <a class="on" href="./sub/CADWarp.html">
+                              <span class="footer__link">CAD Warp</span>
                             </a>
                           </li>
                     </ul>
