--- a/sub/MarketingStrategy.html
+++ b/sub/MarketingStrategy.html
@@ -79,8 +79,8 @@
                                 CAD Catch
                               </a>
                             </li><li>
-                              <a class="on" href="../sub/CADWrap.html">
-                                CAD Wrap
+                              <a class="on" href="../sub/CADWarp.html">
+                                CAD Warp
                               </a>
                             </li>
                       </ul>
@@ -190,8 +190,8 @@
                               CAD Catch
                             </a>
                           </li><li>
-                            <a class="on" href="../sub/CADWrap.html">
-                              CAD Wrap
+                            <a class="on" href="../sub/CADWarp.html">
+                              CAD Warp
                             </a>
                           </li>
                     </ul>
@@ -350,10 +350,10 @@
       <div class="st-ms-bottom-grp">
         <div class="left">
           <div class="img-grp">
-            <img src="../assets/images/img_strategy_06.svg" class="img mb-hide">
-            <img class="img mb-show" src="../assets/images/p3_s2_logo.svg" alt="">
+            <img src="../assets/images/img_strategy_06.svg" class="img tab-hide">
+            <img class="img tab-show" src="../assets/images/p3_s2_logo.svg" alt="">
           </div>
-          <p class="ttl mb-hide">통합 데이터 플랫폼</p>
+          <p class="ttl tab-hide">통합 데이터 플랫폼</p>
         </div>
         <div class="middle">
           <span class="mo-icon-bottom">
@@ -454,8 +454,8 @@
                               <span class="footer__link">CAD Catch</span>
                             </a>
                           </li><li class="">
-                            <a class="on" href="../sub/CADWrap.html">
-                              <span class="footer__link">CAD Wrap</span>
+                            <a class="on" href="../sub/CADWarp.html">
+                              <span class="footer__link">CAD Warp</span>
                             </a>
                           </li>
                     </ul>
