--- a/sub/CADWarp.html
+++ b/sub/CADWarp.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>MediLMMCEO</title>
+    <title>MEDILMM &gt; CADWarp</title>
     <!-- Open Graph / Facebook -->
     <meta property="og:type" content="website">
     <meta property="og:url" content="">
@@ -19,10 +19,10 @@
     <!-- 스타일 eee -->
   <link rel="stylesheet" href="/_custom/index.65d60c1e.css" /></head>
   <body>
-    <main id="ceo" class="ceo">
+    <main id="CADWarp" class="CADWarp">
       <div id="wrap" class="undefined">
         <div class="content-body">
-          <!-- header --><header id="header ../" class="header">
+          <!-- header --><header id="header ../" class="header sub">
   <div class="inner">
     <h1 class="logo">
       <a href="../index.html">
@@ -265,15 +265,232 @@
           <div class="container">
             
   
-  <div class="co-board-detail-section">
-    <div class="inner">
-      <div class="img-grp">
-        <img class="img" src="../assets/images/p2_detail.webp" alt="">
+  <div class="sub-banner" style="background-image:url(../assets/images/img_medilmmCAD.webp)">
+  <div class="inner">
+    <div class="wrap">
+      <div class="div" data-aos="fade-up" data-aos-delay="0" data-aos-duration="1000">
+        <article>
+          <p class="sub-banner-tit on f-pop">CAD Warp</p>
+        </article>
+        <p class="sub-banner-txt">CRO 프로세스를 대화형 AI로 시간 및 공수를 획기적으로 줄인 자동화 인텔리전스 시스템</p>
+        <!-- <img class="" src=`${bannerItem.img}` alt="" /> -->
       </div>
-      <p class="ttl">혁신적인 데이터 활용, 메디렘을 소개합니다.</p>
-      <div class="conts">내용</div>
     </div>
   </div>
+</div>
+  <div class="sub-tab-section">
+  <div class="inner">
+    <ul class="sub-tab-wrap">
+      <li class="list null">
+              <a href="./SimpleModel.html" class="txt undefined">
+                SimPLE Model
+              </a>
+            </li><li class="list null">
+              <a href="./UVLTransformer.html" class="txt undefined">
+                UVL Transformer
+              </a>
+            </li><li class="list null">
+              <a href="./CADCatch.html" class="txt on">
+                CAD Catch
+              </a>
+            </li><li class="list is-active">
+              <a href="./CADWarp.html" class="txt on">
+                CAD Warp
+              </a>
+            </li>
+      <!-- <li class={`list ${isActive === 'active01' ? 'is-active' : ''}`}>
+        <a class="txt" href=`${TabItem.url01}`>{TabItem.firstName}</a>
+      </li>
+      <li class={`list ${isActive === 'active02' ? 'is-active' : ''}`}>
+        <a class="txt" href=`${TabItem.url02}`>{TabItem.SecondName}</a>
+      </li>
+      <li class={`list ${isActive === 'active03' ? 'is-active' : ''}`}>
+        <a class="txt" href=`${TabItem.url03}`>{TabItem.ThirdName}</a>
+      </li>
+      <li class={`list ${isActive === 'active04' ? 'is-active' : ''}`}>
+        <a class="txt" href=`${TabItem.url04}`>{TabItem.FourthName}</a>
+      </li> -->
+    </ul>
+  </div>
+</div>
+
+  <div class="sub-inner">
+    <div class="sub-title-wrap custom tac">
+      <h2 class="f-pop" data-aos="fade-up" data-aos-delay="" data-aos-duration="1000">
+        Management <br class="is-tab-show"> platform
+      </h2>
+      <p data-aos="fade-up" data-aos-delay="200" data-aos-duration="1000">
+        CRO 프로세스를 대화형 AI로 시간 및 <br class="is-tab-show"> 공수를 줄인 자동화 인텔리전스 시스템
+      </p>
+    </div>
+
+    <div class="sec01 inner">
+      <div class="mana-platform-info tac">
+        <div class="img" data-aos="fade-up" data-aos-delay="300" data-aos-duration="1000">
+          <img class="img-w100" src="../assets/images/p4_s1_mockup.webp" alt="" style="width:100%;">
+        </div>
+        <!-- <div class="img is-tab-show">
+          <img class="img-w100" src="../assets/images/mo_p4_s1_mockup.jpg" alt="" />
+        </div> -->
+      </div>
+
+      <ul class="mana-platform-list">
+        <li data-aos="fade-up" data-aos-delay="100" data-aos-duration="1000">
+          <img class="is-tab-hide" src="../assets/images/p4_s1_icon1.webp" alt="">
+          <img class="is-tab-show" src="../assets/images/mo_p4_s1_icon1.webp" alt="">
+          <p class="txt">각 프로세스마다 개별 <br class="is-tab-hide"> LMM이 작동</p>
+        </li>
+        <li data-aos="fade-up" data-aos-delay="200" data-aos-duration="1000">
+          <img class="is-tab-hide" src="../assets/images/p4_s1_icon2.webp" alt="">
+          <img class="is-tab-show" src="../assets/images/mo_p4_s1_icon2.webp" alt="">
+          <p class="txt">모든 프로세스가 유기적으로 <br> 연결되어 업무 효율 극대화</p>
+        </li>
+        <li data-aos="fade-up" data-aos-delay="300" data-aos-duration="1000">
+          <img class="is-tab-hide" src="../assets/images/p4_s1_icon3.webp" alt="">
+          <img class="is-tab-show" src="../assets/images/mo_p4_s1_icon3.webp" alt="">
+          <p class="txt">이전 프로세스의 아웃풋이 <br> 다음 인풋에 저장되어 활용</p>
+        </li>
+      </ul>
+    </div>
+
+    <div class="sec02">
+      <div class="inner">
+        <div class="sub-title-wrap custom tac">
+          <h2 data-aos="fade-up" data-aos-delay="" data-aos-duration="1000">
+            메디렘 <br class="is-tab-show"> CAD-Warp<sup>TM</sup> 플랫폼
+          </h2>
+          <p class="is-tab-hide" data-aos="fade-up" data-aos-delay="200" data-aos-duration="1000">
+            시간, 비용, 인원의 각각 프로세스별 필요 기능들을 LMM으로 모듈화하여 사용자가 간단하게 업무를 <br> 이행할 수
+            있게 하며, 궁극적으로 전체의 프로세스가 순간 이동을 하듯이 자동화되는 고도의 프로세스 이노베이션
+          </p>
+          <p class="is-tab-show" data-aos="fade-up" data-aos-delay="200" data-aos-duration="1000">
+            프로세스별 필요 기능들을 LMM으로 모듈화 하여 <br>
+            사용자가 간단하게 업무를 이행하고, 궁극적으로 <br>
+            순간이동하듯 자동화되는 고도의 프로세스 이노베이션
+          </p>
+        </div>
+
+        <div class="wrap">
+          <div class="process-step-wrap">
+            <div class="left" data-aos="fade-right" data-aos-delay="" data-aos-duration="1000">
+              기존 <br> 프로세스
+            </div>
+            <div class="right">
+              <div class="process-step" data-aos="fade-right" data-aos-delay="100" data-aos-duration="1000">
+                <div class="step-title">전임상 단계</div>
+                <div class="step-content">
+                  <img src="../assets/images/p4_s2_icon1.webp" alt="Step 1">
+                </div>
+              </div>
+              <div class="process-step" data-aos="fade-right" data-aos-delay="100" data-aos-duration="1000">
+                <div class="step-title">1단계</div>
+                <div class="step-content">
+                  <img src="../assets/images/p4_s2_icon2.webp" alt="Step 2">
+                </div>
+                <span class="participant-count">참가자 <br class="is-tab-hide"> 20-80명</span>
+              </div>
+              <div class="process-step" data-aos="fade-right" data-aos-delay="200" data-aos-duration="1000">
+                <div class="step-title">2단계</div>
+                <div class="step-content">
+                  <img src="../assets/images/p4_s2_icon3.webp" alt="Step 2">
+                </div>
+                <span class="participant-count">참가자 <br class="is-tab-hide"> 100-300명</span>
+              </div>
+              <div class="process-step" data-aos="fade-right" data-aos-delay="300" data-aos-duration="1000">
+                <div class="step-title">3단계</div>
+                <div class="step-content">
+                  <img src="../assets/images/p4_s2_icon4.webp" alt="Step 2">
+                </div>
+                <span class="participant-count">참가자 <br class="is-tab-hide">1,000-3,000명</span>
+              </div>
+              <div class="process-step" data-aos="fade-right" data-aos-delay="400" data-aos-duration="1000">
+                <div class="step-title">FDA승인</div>
+                <div class="step-content">안정성 <br> 유효성 확인</div>
+              </div>
+              <div class="process-step" data-aos="fade-right" data-aos-delay="500" data-aos-duration="1000">
+                <div class="step-title">4단계</div>
+                <div class="step-content">
+                  <img src="../assets/images/p4_s2_icon5.webp" alt="Step 2">
+                </div>
+                <span class="participant-count">참가자 <br class="is-tab-hide"> 1,000 +명</span>
+              </div>
+            </div>
+          </div>
+          <div class="process-step-wrap type2">
+            <div class="left" data-aos="fade-right" data-aos-delay="" data-aos-duration="1000">
+              <img class="" src="../assets/images/sub-logo.svg" alt="">
+            </div>
+            <div class="right">
+              <div class="process-step" data-aos="fade-right" data-aos-delay="100" data-aos-duration="1000">
+                <div class="is-tab-hide"><i class="icon icon-arrow scroll-horizontal-img"></i></div>
+                <div class="icon-bottom is-tab-show"><i class="icon icon-arrow scroll-horizontal-img"></i></div>
+                <div class="step-content">
+                  <img class="" src="../assets/images/p4_s2_cad.webp" alt="">
+                </div>
+                <span class="participant-count">CAD-Warp <sup>TM</sup> Pre</span>
+              </div>
+              <div class="process-step" data-aos="fade-right" data-aos-delay="200" data-aos-duration="1000">
+                <div class="is-tab-hide"><i class="icon icon-arrow scroll-horizontal-img"></i></div>
+                <div class="icon-bottom is-tab-show"><i class="icon icon-arrow scroll-horizontal-img"></i></div>
+                <div class="step-content">
+                  <img class="" src="../assets/images/p4_s2_cad.webp" alt="">
+                </div>
+                <span class="participant-count">CAD-Warp <sup>TM</sup> MW</span>
+              </div>
+              <div class="process-step" data-aos="fade-right" data-aos-delay="300" data-aos-duration="1000">
+                <div class="is-tab-hide"><i class="icon icon-arrow scroll-horizontal-img"></i></div>
+                <div class="icon-bottom is-tab-show"><i class="icon icon-arrow scroll-horizontal-img"></i></div>
+                <div class="step-content">
+                  <img class="" src="../assets/images/p4_s2_cad.webp" alt="">
+                </div>
+                <span class="participant-count">CAD-Warp <sup>TM</sup> PM</span>
+              </div>
+              <div class="process-step" data-aos="fade-right" data-aos-delay="400" data-aos-duration="1000">
+                <div class="is-tab-hide"><i class="icon icon-arrow scroll-horizontal-img"></i></div>
+                <div class="icon-bottom is-tab-show"><i class="icon icon-arrow scroll-horizontal-img"></i></div>
+                <div class="step-content">
+                  <img class="" src="../assets/images/p4_s2_cad.webp" alt="">
+                </div>
+                <span class="participant-count">CAD-Warp <sup>TM</sup> PL</span>
+              </div>
+              <div class="process-step" data-aos="fade-right" data-aos-delay="500" data-aos-duration="1000">
+                <div class="is-tab-show">
+                  <div class="is-tab-hide"><i class="icon icon-arrow scroll-horizontal-img"></i></div>
+                  <div class="icon-bottom is-tab-show"><i class="icon icon-arrow scroll-horizontal-img"></i></div>
+                </div>
+                <div class="step-content">
+                  <img class="" src="../assets/images/p4_s2_cad.webp" alt="">
+                </div>
+                <span class="participant-count">CAD-Warp <sup>TM</sup> SM</span>
+              </div>
+              <div class="process-step is-tab-show" data-aos="fade-right" data-aos-delay="500" data-aos-duration="1000">
+                <span style="font-size:14px;font-weight:600;line-height:23px;">
+                  메디렘 CAD-Warp<sup style="font-size:10px;">TM</sup> 시스템에 의한 <br> 임상실험의 자동화</span>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+
+  
+
+  <div class="modal">
+  <div class="modal__bg"></div>
+  <div class="modal__cnt">
+    <div class="modal__close">Close X</div>
+    <div class="modal__text-wrap">
+      <h3>
+        <img class="" src="../assets/images/moda-title.svg" alt="">
+      </h3>
+      <h2></h2>
+    </div>
+    <div class="modal__img">
+      <img class="" src="" alt="">
+    </div>
+  </div>
+</div>
 
           </div>
           <!-- footer --><footer id="footer" class="footer">
@@ -438,4 +655,3 @@
     <script defer src="../assets/js/custom/ui.js"></script>
     <!-- 스크립트 eee -->
   </body></html>
-<!-- 컨텐츠가 들어갈 부분 eee -->
