--- a/sub/SimpleModel.html
+++ b/sub/SimpleModel.html
@@ -79,8 +79,8 @@
                                 CAD Catch
                               </a>
                             </li><li>
-                              <a class="on" href="../sub/CADWrap.html">
-                                CAD Wrap
+                              <a class="on" href="../sub/CADWarp.html">
+                                CAD Warp
                               </a>
                             </li>
                       </ul>
@@ -190,8 +190,8 @@
                               CAD Catch
                             </a>
                           </li><li>
-                            <a class="on" href="../sub/CADWrap.html">
-                              CAD Wrap
+                            <a class="on" href="../sub/CADWarp.html">
+                              CAD Warp
                             </a>
                           </li>
                     </ul>
@@ -299,8 +299,8 @@
                 CAD Catch
               </a>
             </li><li class="list null">
-              <a href="./CADWrap.html" class="txt on">
-                CAD Wrap
+              <a href="./CADWarp.html" class="txt on">
+                CAD Warp
               </a>
             </li>
       <!-- <li class={`list ${isActive === 'active01' ? 'is-active' : ''}`}>
@@ -471,8 +471,8 @@
                               <span class="footer__link">CAD Catch</span>
                             </a>
                           </li><li class="">
-                            <a class="on" href="../sub/CADWrap.html">
-                              <span class="footer__link">CAD Wrap</span>
+                            <a class="on" href="../sub/CADWarp.html">
+                              <span class="footer__link">CAD Warp</span>
                             </a>
                           </li>
                     </ul>
