--- a/sub/Overview.html
+++ b/sub/Overview.html
@@ -4,13 +4,24 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>MEDILMM &gt; Overview</title>
+
+    <meta name="title" content="AI 기반 의료 빅데이터 분석 솔루션">
+    <meta name="description" content="업계 최고의 프론티어, 글로벌 메디컬 AI 데이터 분석 플랫폼">
+    <meta name="keywords" content="다중 모달 데이터, AI 기술, 의료 AI, UVL 트랜스포머, MIT SimPLE, 생성형 AI">
+
     <!-- Open Graph / Facebook -->
     <meta property="og:type" content="website">
     <meta property="og:url" content="">
-    <meta property="og:title" content="medilmm">
-    <meta name="description" content="UVL 트랜스포머와 MIT의 SimPLE 기술을 활용하여 의료 분야에서 다중 모달 데이터를 위한 최첨단 AI 솔루션을 탐색해보세요. 데이터 처리부터 생성적 AI 애플리케이션까지, 특화된 의료 분야 솔루션을 발견하십시오.">
-    <meta property="og:image" content="">
-    <meta name="keywords" content="다중 모달 데이터, AI 기술, 의료 AI, UVL 트랜스포머, MIT SimPLE, 생성형 AI">
+    <meta property="og:title" content="AI 기반 의료 빅데이터 분석 솔루션">
+    <meta property="og:image" content="../assets/images/opengraph.png">
+
+    <link rel="apple-touch-icon" sizes="120x120" href="../assets/images/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="../assets/images/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="../assets/images/favicon-16x16.png">
+    <link rel="manifest" href="../assets/images/site.webmanifest">
+    <meta name="msapplication-TileColor" content="#da532c">
+    <meta name="theme-color" content="#ffffff">
+
     <!-- 스타일 -->
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/sweetalert2@11.4.10/dist/sweetalert2.min.css">
